# hexer

./: .editorconfig  .env.example  .pre-commit-config.yaml  COPYING.md  Caddyfile  README.md  docker-compose.yaml
.github/workflows/: build.yaml  (+4 more)
back/: Cargo.toml  Dockerfile
back/src/: clientmanager.rs  game.rs  gamemanager.rs  main.rs  messages.rs  player.rs
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  mix.exs
backend/assets/: tailwind.config.js
backend/assets/js/: app.js
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: hexer_backend.ex  hexer_backend_web.ex
backend/lib/backend/: application.ex  player_socket_handler.ex  user_socket.ex
backend/lib/backend/game/: dynamic_supervisor.ex  server.ex
backend/lib/hexer_backend/: application.ex  mailer.ex  parser.ex  repo.ex
backend/lib/hexer_backend_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
backend/lib/hexer_backend_web/components/: core_components.ex  layouts.ex
backend/lib/hexer_backend_web/components/layouts/: root.html.heex
backend/lib/hexer_backend_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
backend/priv/repo/: seeds.exs
backend/src/: action.rs  main.rs  player.rs
backend/test/: test_helper.exs
backend/test/hexer_backend/: parser_test.exs
backend/test/hexer_backend_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
backend/test/support/: conn_case.ex  data_case.ex
docs/: game_protocol.md  hexil_action_notation.md  hexil_state_notation.md
front/: Dockerfile  index.html  package-lock.json  package.json  script.ts  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.mix.js
frontend/: Dockerfile  package.json
(+14 files in other folders)
