[dependencies]
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"]  }
tokio-tungstenite = "0.17.2"

[package]
name = "hexer-back"
description = "The backend of hexer"
version = "0.1.0"
authors = ["Marijn van Wezel", "Stef Gijsberts"]
edition = "2021"
repository = "https://github.com/hexil-org/hexer"
license = "AGPL-3.0-or-later"
