[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[package]
name = "hexer-back"
description = "The backend of hexer"
version = "0.1.0"
authors = ["Marijn van Wezel", "Stef Gijsberts"]
edition = "2021"
repository = "https://github.com/hexil-org/hexer"
license = "AGPL-3.0-or-later"
