[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[package]
name = "hexer-backend"
description = "The backend of hexer"
version = "0.1.0"
authors = ["Marijn van Wezel", "Stef Gijsberts"]
edition = "2021"
repository = "https://github.com/hexil-org/hexer"
license = "AGPL-3.0-or-later"
